v1.7 (XXXX-XX-XX)
=================

- Added a general framework for spherical distribution function as
  well as implementations of a few well-known distribution functions,
  including (a) Hernquist distribution functions that are isotropic,
  have constant anisotropy, or have Osipkov-Merritt type anisotropy;
  (b) an isotropic Plummer profile; (c) the King model (also added as
  a potential as KingPotential). These distribution functions can be
  evaluated and sampled, and their velocity moments can be
  computed. Work started in #432 and continued on from there.

- Added NFWPotential initialization method using rmax and vmax, the
  radius and alue at which the rotation curve peaks; also added rmax
  and vmax methods to NFWPotential to compute these quantities for any
  NFWPotential.

- Added general class SphericalPotential to make defining spherical
  potentials easier (#424).

- Added interpSphericalPotential class to build interpolated versions
  of spherical potentials (#424).

- Added potential functions to compute the zero-velocity curve: zvc
  and zvc_range; the latter computes the range in R over which the
  zero-velocity curve is defined, the former gives the positive z
  position on the zero-velocity curve for a given radius in this
  range.

- Added TriaxialGaussianPotential, the potential of a Gaussian that is
  stratified on triaxial ellipsoids (Emsellem et al. 1994). Useful for
  implementing multi-Gaussian expansions of galactic potentials.

- Added AnyAxisymmetricRazorThinDiskPotential, the potential of an
  arbitrary razor-thin, axisymmetric disk.

- Added AnySphericalPotential, the potential of an arbitrary spherical
  density distribution.

- Added inverse action-angle transformations for the isochrone
  potential (actionAngleIsochroneInverse) and for a one-dimensional
  harmonic oscillator (actionAngleHarmonicInverse; also added the
  [x,v] -> [J,O,a] transformation for the latter,
  actionAngleHarmonic).
