@@ -1,0 +1,5 @@
+Isotropic NFW DF
+================
+
+.. autoclass:: galpy.df.isotropicNFWdf
+   :members: __init__
