@@ -389,7 +389,9 @@ class sphericaldf(df):
         
         so that xi is in the range [-1,1], which corresponds to an r range of 
         [0,infinity)"""
-        xis = numpy.arange(-1,1,1e-4)
+        rmax= self._rmax if hasattr(self,'_rmax') else numpy.inf
+        ximax= (1.-1./rmax)/(1.+1./rmax)
+        xis = numpy.arange(-1,ximax,1e-4)
         rs = _xiToR(xis,a=self._scale)
         # try/except necessary when mass doesn't take arrays, also need to
         # switch to a more general mass method at some point...
@@ -397,10 +399,11 @@ class sphericaldf(df):
         ms = self._pot.mass(rs,use_physical=False)
         #except ValueError:
         #    ms= numpy.array([self._pot.mass(r,use_physical=False) for r in rs])
-        ms/= self._pot.mass(numpy.inf,use_physical=False)
+        ms/= self._pot.mass(rmax,use_physical=False)
         # Add total mass point
-        xis = numpy.append(xis,1)
-        ms = numpy.append(ms,1)
+        if numpy.isinf(rmax):
+            xis = numpy.append(xis,1)
+            ms = numpy.append(ms,1)
         return scipy.interpolate.InterpolatedUnivariateSpline(ms,xis,k=3)
 
     def _sample_position_angles(self,n=1):
