@@ -5,8 +5,9 @@ v1.7 (XXXX-XX-XX)
   well as implementations of a few well-known distribution functions,
   including (a) Hernquist distribution functions that are isotropic,
   have constant anisotropy, or have Osipkov-Merritt type anisotropy;
-  (b) an isotropic Plummer profile; (c) the King model (also added as
-  a potential as KingPotential). These distribution functions can be
+  (b) an isotropic Plummer profile; (c) the approximate isotropic NFW
+  profile from Widrow (2000); (d) the King model (also added as a
+  potential as KingPotential). These distribution functions can be
   evaluated and sampled, and their velocity moments can be
   computed. Work started in #432 and continued on from there.
 
@@ -73,6 +74,8 @@ v1.7 (XXXX-XX-XX)
   backwards-compatible).
 
 - Added Python 3.9 support.
+
+- Switched Linux CI from Travis to GitHub Actions.
 
 v1.6 (2020-04-24)
 =================
